--- a/pcr1-stack.html
+++ b/pcr1-stack.html
@@ -58,6 +58,7 @@
         </td>
         <td>
           <div id="Tab5" class="tab">
+            <button class="tablinks" onclick="openCity(event, 'C', 'Mon5')">4-way</button>
             <button class="tablinks" onclick="openCity(event, 'F', 'Mon5')">9-way</button>
             <button class="tablinks" onclick="openCity(event, 'P', 'Mon5')" id="defaultOpen5">10-way</button>
             <button class="tablinks" onclick="openCity(event, 'H', 'Mon5')">16-way</button>
