--- a/vt1.html
+++ b/vt1.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <title>VT 1 Co-Ord Monitor Stack></title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="styling.css">
   <script src="moncontent.js"> </script>
