--- a/pcr34.html
+++ b/pcr34.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+  <title>PCR 34 Monitor Stack</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="styling.css">
   <script src="moncontent.js"> </script>
