--- a/pcr4.html
+++ b/pcr4.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <title>PCR 4 Monitor Stack</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="styling.css">
   <script src="moncontent.js"> </script>
