--- a/vt2.html
+++ b/vt2.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <title>Replay 2 VT Co-Ordinator Monitor Stack</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="styling.css">
   <script src="moncontent.js"> </script>
