--- a/prod1.html
+++ b/prod1.html
@@ -36,8 +36,8 @@
           <div id="Tab2" class="tab">
             <button class="tablinks" onclick="openCity(event, 'A', 'Mon2')">Full</button>
             <button class="tablinks" onclick="openCity(event, 'C', 'Mon2')" id="defaultOpen2">4-way</button>
-            <button class="tablinks" onclick="openCity(event, 'F', 'Mon2')">6-way</button>
-            <button class="tablinks" onclick="openCity(event, 'OO', 'Mon2')">6-way</button>
+            <button class="tablinks" onclick="openCity(event, 'xxx1', 'Mon2')">6-way</button>
+            <button class="tablinks" onclick="openCity(event, 'xxx2', 'Mon2')">6-way</button>
           </div>
           <div id="Mon2" class="moncontent" />
         </td>
