--- a/index.html
+++ b/index.html
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
 <html>
+    <head>
+    <link rel="stylesheet" href="styling.css">
+    </head>
 <body>
 <h1>Monitor Stacks</h1>
 <p>Index page</p>
+            
 </body>
 </html>
